2011-03-17  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.17.2 Released.

	(Asterisk 1.6.2.17.1 was released a day earlier, but a bug existed in
	the patch for AST-2011-003 so this is a reissue of that release.)

	* AST-2011-003: Resource exhaustion in Asterisk Manager Interface

	* AST-2011-004: Remote crash vulnerability in TCP/TLS server

2011-02-22  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.17 Released.

	* Merged in changes related to AST-2011-002

2011-02-16  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.17-rc3 Released.

	------------------------------------------------------------------------
	r308002 | qwell | 2011-02-15 17:32:21 -0600 (Tue, 15 Feb 2011) | 10
	lines

	Fix regression that changed behavior of queues when ringing a queue
	member.

	This reverts r298596, which was to fix a highly bizarre and contrived
	issue with a queue member that called into his own queue being
	transferred back into his own queue. I couldn't reproduce that issue 
	in any way. I think one of the other recent transfer fixes actually 
	fixed this.

	(closes issue 0018747)
	Reported by: vrban

	------------------------------------------------------------------------

2011-01-20  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.2.17-rc2 Released.

	------------------------------------------------------------------------
	r302172 | rmudgett | 2011-01-18 12:04:37 -0600 (Tue, 18 Jan 2011) | 88
	lines

	Issues with DTMF triggered attended transfers.

	Issue 0017999
	1) A calls B. B answers.
	2) B using DTMF dial *2 (code in features.conf for attended transfer).
	3) A hears MOH. B dial number C
	4) C ringing. A hears MOH.
	5) B hangup. A still hears MOH. C ringing.
	6) A hangup. C still ringing until "atxfernoanswertimeout" expires.
	For v1.4 C will ring forever until C answers the dead line. (Issue
	0017096)

	Problem: When A and B hangup, C is still ringing.

	Issue 0018395
	SIP call limit of B is 1
	1. A call B, B answered
	2. B *2(atxfer) call C