@@ -1,96 +1,0 @@
-                                Release Summary
-
-                              asterisk-1.6.2.17.2
-
-                                Date: 2011-03-17
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release has been made to address one or more security vulnerabilities
-   that have been identified. A security advisory document has been published
-   for each vulnerability that includes additional information. Users of
-   versions of Asterisk that are affected are strongly encouraged to review
-   the advisories and determine what action they should take to protect their
-   systems from these issues.
-
-   Security Advisories: AST-2011-003, AST-2011-004
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-1.6.2.17.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   3 lmadsen                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 311178   | lmadsen | Copy Asterisk 1.6.2.17 to     |                   |
-   |          |         | 1.6.2.17.2                    |                   |
-   |----------+---------+-------------------------------+-------------------|
-   |          |         | Update ChangeLog, .version.   |                   |
-   | 311190   | lmadsen | Patches for AST-2011-003, and |                   |
-   |          |         | AST-2011-004.                 |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 311191   | lmadsen | Fix typo in ChangeLog         |                   |
-   |          |         | message.                      |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                       |    2
- ChangeLog                      |   11 +
- asterisk-1.6.2.17-summary.html |  332 ---------------------------------
- asterisk-1.6.2.17-summary.txt  |  411 -----------------------------------------
- main/manager.c                 |   15 -
- main/tcptls.c                  |    8
- 6 files changed, 28 insertions(+), 751 deletions(-)
-
-     ----------------------------------------------------------------------
